--- a/style5.css
+++ b/style5.css
@@ -28,7 +28,7 @@ body {
   position: absolute;
   margin: 0;
   padding: 0;
-  color: #f9f1e9;
+  color: #FF0000;    /*#f9f1e9*/
   text-align: center;
   top: 50%;
   left: 50%;
