--- a/style5.css
+++ b/style5.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
   font-family: Orbitron;
   letter-spacing: 1.5px;
-	border-width: 2px;
-	border-color: red;
-	border-style: solid;
+	/*
+	border: 2px solid red;
+	*/
 }
 
 body {
@@ -15,7 +15,7 @@ body {
   overflow-x: hidden;
 }
 
-                             /* Title section*/
+/* Title section*/
 
 .large-header{
   position: relative;
@@ -430,4 +430,18 @@ a:hover {
 .tech-items {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
+	width:50%;
+	gap: 12px;
+}
+
+.tech-items .icon-box img {
+	padding-right: 10px;
+}
+
+.tech-items-wrap {
+	display: flex;
+	justify-content:center;
+	align-items: center;
+	margin: 50px 0px;
 }
