--- a/style5.css
+++ b/style5.css
@@ -13,6 +13,7 @@ body {
   text-align: center;
   transition: all 1s ease;
   overflow-x: hidden;
+	background-color: #111111;
 }
 
 /* Title section*/
@@ -379,37 +380,12 @@ html {
 
 @supports (-webkit-background-clip:text) or (background-clip:text){.text-color-main{background-image:linear-gradient(135deg, #50d890, #50d890);-webkit-background-clip:text;-webkit-text-fill-color:transparent;color:transparent}}@media (max-width:37.5em){.text-color-main{background-image:none;-webkit-text-fill-color: #50d890}}.text-color-main:hover{transform:translateX(2px)}.cta-btn{display:inline-block;position:relative;padding:.8rem 1.6rem;font-weight:700;line-height:1;z-index:1;transition:all .6s cubic-bezier(.19,1,.22,1)}.cta-btn:after{content:"";display:block;position:absolute;width:0;height:100%;left:0;bottom:0;z-index:-1;transition:all .3s cubic-bezier(.19,1,.22,1)}.cta-btn--hero{color:#50d890;-webkit-text-fill-color:#50d890;border:2px solid #50d890;border-radius:10px;border-image-slice:1}@supports (-webkit-background-clip:text) or (background-clip:text){.cta-btn--hero{background-image:linear-gradient(135deg,#50d890, #50d890);-webkit-background-clip:text;-webkit-text-fill-color:transparent;color:transparent}}@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none){.cta-btn--hero{color: #50d890!important}.cta-btn--hero:hover{color:#fff!important}}@media (max-width:37.5em){.cta-btn--hero{background-image:none;border:2px solid #50d890;-webkit-text-fill-color:#50d890}}.cta-btn--hero:after{background-image:linear-gradient(135deg,#50d890, #50d890)}@media (max-width:37.5em){.cta-btn--hero:after{background-image:none}}.cta-btn--hero:hover{-webkit-text-fill-color:#fff;text-decoration:none}@media (max-width:37.5em){.cta-btn--hero:hover{-webkit-text-fill-color:#50d890}}.cta-btn--hero:hover:after{width:100%}.cta-btn--resume{color:#fff;border:2px solid #fff;border-radius:5px}
 /* BLOGS */
-
-.div1{
-  float: left;
-  margin-left: 240px;
-  width: 400px;
-  height: 300px;
-  
-
-}
 a:hover {
   color: grey;
 }
-.div2{
-  float: left;
-  margin-left: 120px;
-  width: 400px;
-  height: 300px;
-  border: 0px;
-  
 
-}
-.div3{
-  float: left;
-  margin-left: 120px;
-  width: 400px;
-  height: 300px;
-  border: 0px;
-  
 
-}
-
+/* Functional components */
 
 .flex {
 	display: flex;
@@ -444,4 +420,8 @@ a:hover {
 	justify-content:center;
 	align-items: center;
 	margin: 50px 0px;
+}
+
+.img-fluid {
+	height: 300px;
 }
