--- a/style5.css
+++ b/style5.css
@@ -31,7 +31,7 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
-  
+  background-color: transparent;
   background: hsl(0 0% 0% / 0.5);
 }
 
