--- a/style5.css
+++ b/style5.css
@@ -20,11 +20,13 @@ body {
 .flex {
   display: flex;
   gap: var(--gap,4rem);
+	background-color: transparent;
 }
 
 .primary-header {
   align-items: center;
   justify-content: space-between;
+	background-color: transparent;
 }
 
 .primary-navigation {
@@ -39,17 +41,20 @@ body {
   .primary-navigation {
     background: hsl(0 0% 100% / 0.1);
     backdrop-filter: blur(1rem);
+	  background-color: transparent;
   }
 
 }
 
 .primary-navigation a {
   text-decoration: none;
+	background-color: transparent;
 }
 
 .primary-navigation a > [aria-hidden="true"] {
   font-weight: 700;
   margin-inline-end: 0.75em;
+	background-color: transparent;
 }
 
 @media (max-width: 35em) {
@@ -57,7 +62,7 @@ body {
     --gap: 2em;
     position: fixed;
     inset: 0 0 0 30%;
-
+background-color: transparent;
     flex-direction: column;
     padding: min(20vh, 10rem) 2rem;
     
