--- a/style5.css
+++ b/style5.css
@@ -55,16 +55,16 @@ body {
 .primary-navigation a {
   text-decoration: none;
 	background-color: transparent;
-	  margin-left: 90px;
-  margin-top: 50px;
+/* 	  margin-left: 90px;
+  margin-top: 50px; */
 }
 
 .primary-navigation a > [aria-hidden="true"] {
   font-weight: 700;
   margin-inline-end: 0.75em;
 	background-color: transparent;
-	  margin-left: 90px;
-  margin-top: 50px;
+/* 	  margin-left: 90px;
+  margin-top: 50px; */
 }
 
 /* @media (max-width: 35em) {
